Fix align in footer text

--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -73,6 +73,7 @@
       }
     }
     &__text {
+      text-align: start;
       order: 1;
       padding-top: 15px;
     }
